--- a/lib/db_web/components/layouts/app.html.heex
+++ b/lib/db_web/components/layouts/app.html.heex
@@ -1,6 +1,3 @@
-<main>
-  <div class="mx-auto max-w-full">
-    <.flash_group flash={@flash} />
-    {@inner_content}
-  </div>
-</main>
+<div class="app">
+  {@inner_content}
+</div>
