--- a/lib/db_web/components/layouts/root.html.heex
+++ b/lib/db_web/components/layouts/root.html.heex
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<html
-  lang="en"
-  class="flex flex-col h-full bg-gray-100 dark:bg-gray-900 [scrollbar-gutter:stable]"
->
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -24,8 +21,23 @@
     />
     <link rel="icon" type="image/x-icon" href={~p"/favicon.ico"} />
   </head>
-  <body>
-    <._nav :if={assigns[:nav] != :fullscreen} conn={@conn} />
-    {@inner_content}
+  <body class="bg-white dark:bg-zinc-950">
+    <div
+      :if={Pow.Plug.current_user(@conn)}
+      class="relative isolate flex min-h-svh w-full max-lg:flex-col lg:bg-zinc-100 dark:bg-zinc-900 dark:lg:bg-zinc-950"
+    >
+      <.flash_group flash={@flash} />
+      <.nav nav conn={@conn} />
+      <main class="flex flex-1 flex-col lg:min-w-0 lg:pt-2 lg:pr-2 lg:pl-64">
+        <div class="grow p-6 lg:rounded-lg lg:bg-white lg:p-10 lg:shadow-xs lg:ring-1 lg:ring-zinc-950/5 dark:lg:bg-zinc-900 dark:lg:ring-white/10">
+          <div class="mx-auto max-w-6xl">
+            {@inner_content}
+          </div>
+        </div>
+      </main>
+    </div>
+    <div :if={!Pow.Plug.current_user(@conn)} class="flex flex-1 flex-col">
+      {@inner_content}
+    </div>
   </body>
 </html>
