--- a/lib/db_web/controllers/pow/registration_html/edit.html.heex
+++ b/lib/db_web/controllers/pow/registration_html/edit.html.heex
@@ -8,7 +8,7 @@
     for={@changeset}
     as={:user}
     action={@action}
-    class="bg-white dark:bg-gray-800 mt-10 sm:mx-auto sm:w-full sm:max-w-[480px] px-12 pb-10 shadow rounded-lg"
+    class="bg-zinc-50 dark:bg-zinc-800 mt-10 sm:mx-auto sm:w-full sm:max-w-[480px] px-12 pb-10 shadow rounded-lg"
   >
     <.error :if={
       Pow.Plug.extension_enabled?(@conn, PowResetPassword) && @changeset.data.unconfirmed_email
