--- a/lib/db_web/controllers/pow_reset_password/reset_password_html/new.html.heex
+++ b/lib/db_web/controllers/pow_reset_password/reset_password_html/new.html.heex
@@ -18,7 +18,7 @@
     for={@changeset}
     as={:user}
     action={@action}
-    class="bg-white dark:bg-gray-800 mt-10 sm:mx-auto sm:w-full sm:max-w-[480px] px-12 pb-10 shadow rounded-lg"
+    class="bg-zinc-50 dark:bg-zinc-800 mt-10 sm:mx-auto sm:w-full sm:max-w-[480px] px-12 pb-10 shadow rounded-lg"
   >
     <.error :if={@changeset.action}>
       Oops, something went wrong! Please check the errors below.
