--- a/lib/db_web/controllers/pow_reset_password/reset_password_html/edit.html.heex
+++ b/lib/db_web/controllers/pow_reset_password/reset_password_html/edit.html.heex
@@ -1,16 +1,6 @@
 <div class="flex min-h-full flex-col justify-center py-12 sm:px-6 lg:px-8">
   <.header class="text-center">
     Reset password
-    <:subtitle>
-      Know your password?
-      <.link
-        navigate={Pow.Phoenix.Routes.path_for(@conn, Pow.Phoenix.SessionController, :new)}
-        class="font-semibold text-brand hover:underline"
-      >
-        Sign in
-      </.link>
-      now.
-    </:subtitle>
   </.header>
 
   <.simple_form
@@ -21,7 +11,7 @@
     class="bg-zinc-50 dark:bg-zinc-800 mt-10 sm:mx-auto sm:w-full sm:max-w-[480px] px-12 pb-10 shadow rounded-lg"
   >
     <.error :if={@changeset.action}>
-      Oops, something went wrong! Please check the errors below.
+      Something went wrong!
     </.error>
     <.input field={f[:password]} type="password" label="New password" required />
     <.input
