--- a/lib/db_web/controllers/pow/registration_html/edit.html.heex
+++ b/lib/db_web/controllers/pow/registration_html/edit.html.heex
@@ -18,7 +18,7 @@
       </span>
     </.error>
     <.error :if={@changeset.action}>
-      something went wrong!
+      Something went wrong!
     </.error>
     <.input
       field={f[:current_password]}
