--- a/lib/db_web/components/layouts/nav.desktop.html.heex
+++ b/lib/db_web/components/layouts/nav.desktop.html.heex
@@ -21,9 +21,7 @@
             <div class="absolute top-1/2 left-1/2 size-[max(100%,2.75rem)] -translate-x-1/2 -translate-y-1/2 pointer-fine:hidden" />
             <.svg icon={:home} />
             <div class="truncate">
-              {Gettext.with_locale(Pow.Plug.current_user(@conn).locale, fn ->
-                gettext("home")
-              end)}
+              {Gettext.with_locale(Pow.Plug.current_user(@conn).locale, fn -> gettext("home") end)}
             </div>
           </.link>
         </div>
@@ -35,9 +33,7 @@
             <div class="absolute top-1/2 left-1/2 size-[max(100%,2.75rem)] -translate-x-1/2 -translate-y-1/2 pointer-fine:hidden" />
             <.svg icon={:settings} />
             <div class="truncate">
-              {Gettext.with_locale(Pow.Plug.current_user(@conn).locale, fn ->
-                gettext("settings")
-              end)}
+              {Gettext.with_locale(Pow.Plug.current_user(@conn).locale, fn -> gettext("settings") end)}
             </div>
           </.link>
         </div>
@@ -47,30 +43,26 @@
         <div class="relative">
           <.link
             class="flex w-full items-center gap-3 rounded-lg px-2 py-2.5 text-left text-base/6 font-medium text-zinc-950 sm:py-2 sm:text-sm/5 *:data-[slot=icon]:size-6 *:data-[slot=icon]:shrink-0 *:data-[slot=icon]:fill-zinc-500 sm:*:data-[slot=icon]:size-5 *:last:data-[slot=icon]:ml-auto *:last:data-[slot=icon]:size-5 sm:*:last:data-[slot=icon]:size-4 *:data-[slot=avatar]:-m-0.5 *:data-[slot=avatar]:size-7 sm:*:data-[slot=avatar]:size-6 data-hover:bg-zinc-950/5 data-hover:*:data-[slot=icon]:fill-zinc-950 data-active:bg-zinc-950/5 data-active:*:data-[slot=icon]:fill-zinc-950 data-current:*:data-[slot=icon]:fill-zinc-950 dark:text-white dark:*:data-[slot=icon]:fill-zinc-400 dark:data-hover:bg-white/5 dark:data-hover:*:data-[slot=icon]:fill-white dark:data-active:bg-white/5 dark:data-active:*:data-[slot=icon]:fill-white dark:data-current:*:data-[slot=icon]:fill-white"
-            href="https://github.com/LukasW01/db-brm/issues/new"
+            href="https://gitlab.com/LukasW01/db-brm/-/issues/new"
             _target="_blank"
           >
             <div class="absolute top-1/2 left-1/2 size-[max(100%,2.75rem)] -translate-x-1/2 -translate-y-1/2 pointer-fine:hidden" />
             <.svg icon={:support} />
             <div class="truncate">
-              {Gettext.with_locale(Pow.Plug.current_user(@conn).locale, fn ->
-                gettext("support")
-              end)}
+              {Gettext.with_locale(Pow.Plug.current_user(@conn).locale, fn -> gettext("support") end)}
             </div>
           </.link>
         </div>
         <div class="relative">
           <.link
             class="flex w-full items-center gap-3 rounded-lg px-2 py-2.5 text-left text-base/6 font-medium text-zinc-950 sm:py-2 sm:text-sm/5 *:data-[slot=icon]:size-6 *:data-[slot=icon]:shrink-0 *:data-[slot=icon]:fill-zinc-500 sm:*:data-[slot=icon]:size-5 *:last:data-[slot=icon]:ml-auto *:last:data-[slot=icon]:size-5 sm:*:last:data-[slot=icon]:size-4 *:data-[slot=avatar]:-m-0.5 *:data-[slot=avatar]:size-7 sm:*:data-[slot=avatar]:size-6 data-hover:bg-zinc-950/5 data-hover:*:data-[slot=icon]:fill-zinc-950 data-active:bg-zinc-950/5 data-active:*:data-[slot=icon]:fill-zinc-950 data-current:*:data-[slot=icon]:fill-zinc-950 dark:text-white dark:*:data-[slot=icon]:fill-zinc-400 dark:data-hover:bg-white/5 dark:data-hover:*:data-[slot=icon]:fill-white dark:data-active:bg-white/5 dark:data-active:*:data-[slot=icon]:fill-white dark:data-current:*:data-[slot=icon]:fill-white"
-            href="https://github.com/LukasW01/db-brm/releases"
+            href="https://gitlab.com/LukasW01/db-brm/-/releases"
             _target="_blank"
           >
             <div class="absolute top-1/2 left-1/2 size-[max(100%,2.75rem)] -translate-x-1/2 -translate-y-1/2 pointer-fine:hidden" />
             <.svg icon={:changelog} />
             <div class="truncate">
-              {Gettext.with_locale(Pow.Plug.current_user(@conn).locale, fn ->
-                gettext("changelog")
-              end)}
+              {Gettext.with_locale(Pow.Plug.current_user(@conn).locale, fn -> gettext("changelog") end)}
             </div>
           </.link>
         </div>
