--- a/lib/db_web/components/layouts/nav.desktop.html.heex
+++ b/lib/db_web/components/layouts/nav.desktop.html.heex
@@ -33,7 +33,9 @@
             <div class="absolute top-1/2 left-1/2 size-[max(100%,2.75rem)] -translate-x-1/2 -translate-y-1/2 pointer-fine:hidden" />
             <.svg icon={:settings} />
             <div class="truncate">
-              {Gettext.with_locale(Pow.Plug.current_user(@conn).locale, fn -> gettext("settings") end)}
+              {Gettext.with_locale(Pow.Plug.current_user(@conn).locale, fn ->
+                gettext("settings")
+              end)}
             </div>
           </.link>
         </div>
@@ -49,7 +51,9 @@
             <div class="absolute top-1/2 left-1/2 size-[max(100%,2.75rem)] -translate-x-1/2 -translate-y-1/2 pointer-fine:hidden" />
             <.svg icon={:support} />
             <div class="truncate">
-              {Gettext.with_locale(Pow.Plug.current_user(@conn).locale, fn -> gettext("support") end)}
+              {Gettext.with_locale(Pow.Plug.current_user(@conn).locale, fn ->
+                gettext("support")
+              end)}
             </div>
           </.link>
         </div>
@@ -62,7 +66,9 @@
             <div class="absolute top-1/2 left-1/2 size-[max(100%,2.75rem)] -translate-x-1/2 -translate-y-1/2 pointer-fine:hidden" />
             <.svg icon={:changelog} />
             <div class="truncate">
-              {Gettext.with_locale(Pow.Plug.current_user(@conn).locale, fn -> gettext("changelog") end)}
+              {Gettext.with_locale(Pow.Plug.current_user(@conn).locale, fn ->
+                gettext("changelog")
+              end)}
             </div>
           </.link>
         </div>
