--- a/lib/db_web/components/layouts/root.html.heex
+++ b/lib/db_web/components/layouts/root.html.heex
@@ -27,7 +27,7 @@
       :if={Pow.Plug.current_user(@conn)}
       class="relative isolate flex min-h-svh w-full max-lg:flex-col lg:bg-zinc-100 dark:bg-zinc-900 dark:lg:bg-zinc-950"
     >
-      <.nav nav conn={@conn} />
+      <.nav conn={@conn} />
       <main class="flex flex-1 flex-col lg:min-w-0 lg:pt-2 lg:pr-2 lg:pl-64">
         <div class="grow p-6 lg:rounded-lg lg:bg-white lg:p-10 lg:shadow-xs lg:ring-1 lg:ring-zinc-950/5 dark:lg:bg-zinc-900 dark:lg:ring-white/10">
           <div class="mx-auto max-w-6xl">
